# ssh_clipboard

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  build.rs  todos.md
.github/workflows/: ci.yml  release.yml
docs/: agent.md  autostart.md  ci.md  cli.md  client-setup.md  dependency-decisions.md  icon.md  index.md  linux-client.md  protocol.md  releasing.md  security.md  server-setup.md  testing.md  troubleshooting.md  writing-docs.md
src/: client_actions.rs  daemon.rs  framing.rs  lib.rs  main.rs  protocol.rs  proxy.rs
src/agent/: autostart.rs  hotkey.rs  mod.rs  notify.rs  run.rs
src/cli/: agent.rs  doctor.rs  exit.rs  install_client.rs  install_daemon.rs  mod.rs  peek.rs  pull.rs  push.rs  setup_agent.rs
src/client/: clipboard.rs  image.rs  mod.rs  ssh.rs  transport.rs
