[package]
name = "ssh_clipboard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
eyre = "0.6"
thiserror = "1"
arboard = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
