[package]
name = "ssh_clipboard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
eyre = "0.6"
thiserror = "1"
arboard = "3"
image = "0.25"
base64 = "0.22"
serde_json = "1"

global-hotkey = { version = "0.7", optional = true }
tray-icon = { version = "0.21", optional = true }
tao = { version = "0.34", optional = true }
confy = { version = "2", optional = true }
auto-launch = { version = "0.6", optional = true }
single-instance = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = { version = "0.5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = { version = "4.11", optional = true }

[features]
default = []
agent = [
  "dep:global-hotkey",
  "dep:tray-icon",
  "dep:tao",
  "dep:confy",
  "dep:auto-launch",
  "dep:single-instance",
  "dep:tracing-appender",
  "dep:winrt-notification",
  "dep:notify-rust",
]
